JumpScript/tests/baselines/reference/ES5SymbolProperty5.errors.txt
tests/cases/conformance/Symbols/ES5SymbolProperty5.jump(7,1): error TS2554: Expected 0 arguments, but got 1.


==== tests/cases/conformance/Symbols/ES5SymbolProperty5.jump (1 errors) ====
    var Symbol: { iterator: symbol };
    
    class C {
        [Symbol.iterator]() { }
    }
    
    (new C)[Symbol.iterator](0) // Should error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 0 arguments, but got 1.